--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 <h2>04. Conclusion</h2>
                 <p>
                  Mr.Bean is a novel tool that allows users to analyze single and multi-environment trials in a fast and efficient way. 
-                 The app can be also use for teaching, comparing approaches, and for decision-making. 
+                 The app can be also used for teaching, comparing approaches, and for decision-making. 
                 </p>
               </li>
             </ul>
@@ -546,8 +546,51 @@
           <!-- .end .wrap -->
         </section>
 
-        <section class="aligncenter">
-          <!--.wrap = container (width: 90%) -->
+        <section>
+          <div class="wrap">
+            <h3> <strong> Interests and Hobbies </strong></h3>
+            <ul class="flexblock features">
+              <li>
+                <div>
+                  <h3>
+                    Science
+                  </h3>
+                  <ul class="description">
+                    <li> Quantative Genetics   </li>
+                    <li> Statistics </li>
+                    <li> ShinyApps</li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <h3>
+                    Sports
+                  </h3>
+                  <ul class="description">
+                    <li> Tennis   </li>
+                    <li> Volleyball  </li>
+                    <li> Gym </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <h3>
+                    Art
+                  </h3>
+                  <ul class="description">
+                    <li> Piano  (new) </li>
+                    <li> Dancing Salsa </li>
+                  </ul>
+                </div>
+              </li>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <!-- <section class="aligncenter">
         <div class="wrap size-50">
           <h2 class="text-landing">Thank You</h2>
           <p class="text-intro">Johan Aparicio</p>
@@ -579,7 +622,7 @@
              </ul>
            </nav>
         </div>
-      </section>
+      </section> -->
 
       <section class="bg-grey aligncenter">
         <span class="background dark" style="background-image:url('static/images/johan/CIAT.jpg')"></span>
