--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               <!-- li>a? Add blink = <ul class="flexblock steps blink">-->
               <li>
                 <h2>01. Aim</h2>
-                <p>Develop an easy-to-use, practical and user-friendly tool for analysing field trial in agriculture.
+                <p>Develop an easy-to-use, practical and user-friendly tool for analysing field trials in agriculture.
                 </p>
               </li>
               <li>
@@ -402,7 +402,8 @@
               <li>
                 <div class="process step-3"></div>
                 <h2>03. Result</h2>
-                <p>R-Shiny open source package.
+                <p>R-Shiny open source package with multiple options of analysis. 
+                  Single Site / MET / Multiple traits / Heritabilties / Genotypic Correlations / Variance-Covariance structures. 
                   <a rel="external" href="https://apariciojohan.github.io/MrBeanApp/index.html" title="Github">
                     <svg class="fa-github">
                       <use xlink:href="#fa-github"></use>
@@ -548,7 +549,67 @@
 
         <section>
           <div class="wrap">
-            <h3> <strong> Interests and Hobbies </strong></h3>
+            <div class="cta text-serif">
+              <div class="number">
+                <div class="column">
+                  <h3><strong>Areas of future focus & Improvement</strong></h3>
+                  <ul class="flexblock specs">
+                    <li>
+                      <div>
+                        Quantitative Genetics.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Programming in python.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Learning deeply AlphaSimR.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Machine Learning.
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!--end .number -->
+              <div class="benefit">
+                <div class="column">
+                  <h3><strong>After this...</strong></h3>
+                  <ul class="flexblock specs">
+                    <li>
+                      <div>
+                        Developing new tools, libraries, shinyapps, ...
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Leading a biometrics team.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Professor, DOE, Mixed Models, Statistical learning.
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!--end .benefit -->
+            </div>
+            <!--end .cta -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
+
+        <section>
+          <div class="wrap">
+            <h3> <strong>Hobbies </strong></h3>
             <ul class="flexblock features">
               <li>
                 <div>
@@ -556,9 +617,9 @@
                     Science
                   </h3>
                   <ul class="description">
-                    <li> Quantative Genetics   </li>
-                    <li> Statistics </li>
-                    <li> ShinyApps</li>
+                    <li> Data Analysis   </li>
+                    <li> Teaching </li>
+                    <li> Programming</li>
                   </ul>
                 </div>
               </li>
