--- a/index_copy.html
+++ b/index_copy.html
@@ -177,7 +177,7 @@
                     </li>
                     <li>
                       <div>
-                        <h2>2020 Project KOLFACI</h2>
+                        <h2>2020 Proyect KOLFACI</h2>
                         <p>
                           <a rel="external" href="https://apariciojohan.github.io/Starting_MrBean/" title="Github">
                             <svg class="fa-github">
@@ -377,7 +377,7 @@
           </div>               
         </section> -->
 
-        <!-- <section>
+        <section>
           <div class="wrap">
             <h3> <strong> Favorite Project </strong></h3>
             <p>
@@ -386,6 +386,7 @@
             </p>
             
             <ul class="flexblock steps">
+              <!-- li>a? Add blink = <ul class="flexblock steps blink">-->
               <li>
                 <h2>01. Aim</h2>
                 <p>Develop an easy-to-use, practical and user-friendly tool for analysing field trials in agriculture.
@@ -420,10 +421,11 @@
               </li>
             </ul>
           </div>
-        </section> -->
+          <!-- .end .wrap -->
+        </section>
 
 
-        <!-- <section>
+        <section>
           <div class="wrap">
             <h3><strong>Favorite Project</strong></h3>
             <p>
@@ -506,15 +508,13 @@
               </li>
             </ul>
           </div>
-        </section> -->
-
-
+        </section>
         <section>
           <div class="wrap">
-            <h2><strong>Develoments and Contributions</strong></h2>
-            <h4> R-Packages</h4>
+            <h3><strong>Develoments and Contributions</strong></h3>
+            <p> R-Packages</p>
             <center>
-              <img alt="Thumbnail " src="static/images/projects.png" width="60%">
+              <img alt="Thumbnail " src="static/images/projects.png" width="70%">
             </center>
           </div>
         </section>
@@ -527,11 +527,7 @@
               Mr.Bean is an easy-to-use <strong>R-Shiny</strong> web-app that simplifies the analysis of large-scale 
               plant breeding experimental analysis by using the power and versatility of Linear Mixed Models (LMM).
                This app combines the analytical robustness and speed of <code>ASReml</code> and <code>SpATS</code> with the visual power offered by R. 
-               <a href="https://github.com/AparicioJohan/MrBeanApp">
-                <svg class="fa-github">
-                  <use xlink:href="#fa-github"></use>
-                </svg>AparicioJohan/MrBeanApp
-              </a>
+               <a href="https://github.com/AparicioJohan/MrBeanApp"> https://github.com/AparicioJohan/MrBeanApp </a>
                <br> <br> <br>
             </p>
             <center>
@@ -539,81 +535,45 @@
             </center>
           </div>
         </section>
-        <section>
-          <div class="wrap">
-            <img class="alignleft size-50" src="static/images/fieldhub.png">
-            <h2><strong>FielDHub</strong></h2>
-            <br>
-            <p>
-              A shiny design of experiments (<strong>DOE</strong>) app that aids in the creation of traditional, un-replicated, 
-              augmented and partially-replicated designs applied to agriculture, plant breeding, forestry, animal
-              and biological sciences. 
-              <a href="https://github.com/DidierMurilloF/FielDHub">
-                <svg class="fa-github">
-                  <use xlink:href="#fa-github"></use>
-                </svg>DidierMurilloF/FielDHub
-              </a>
-               <br> <br> <br>
-            </p>
-            <center>
-              <img src="static/images/fieldhub_team.png" alt="team" width="35%">
-            </center>
-          </div>
-        </section>
 
         <section>
           <div class="wrap">
-            <img class="alignright size-20" src="static/images/boc_agriutilities2.png">
-            <h2><strong>agriUtilities</strong></h2>
-            <br> <br> <br>
-            <p>
-              agriutilities is an <code>R</code> package designed to make the analysis of field trials easier and more accessible
-              for everyone working in plant breeding. It provides a simple and intuitive interface for conducting
-              single (<strong>STA</strong>) and multi-environmental trial analysis (<strong>MET</strong>), with minimal coding required. Whether you're a beginner
-              or an experienced user, agriUtilities will help you quickly and easily carry out complex analyses with
-              confidence. With built-in functions for fitting Linear Mixed Models (<code>LMM</code>), agriUtilities is the ideal
-              choice for anyone who wants to save time and focus on interpreting their results.
-              <br>
-               <a href="https://github.com/AparicioJohan/agriutilities">
-                <svg class="fa-github">
-                  <use xlink:href="#fa-github"></use>
-                </svg>AparicioJohan/agriutilities
-              </a>
-               <br> <br>
-            </p>
-            <center>
-              <img src="static/images/agri_team.png" alt="team" width="20%">
-            </center>
+            <h3><strong>Tools</strong></h3>
+            <p> R-Shiny Packages</p>
+            <ul class="flexblock gallery">
+              <li>
+                <a href="https://github.com/AparicioJohan/MrBeanApp">
+                  <div class="overlay">
+                    <h2>MrBean</h2>
+                    <p> <strong>ShinyApp</strong> </p>
+                  </div>
+                  <img alt="Thumbnail " src="static/images/johan/mrbean.png">
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/AparicioJohan/MrGenApp">
+                  <div class="overlay">
+                    <h2>MrGen</h2>
+                    <p> <strong>ShinyApp</strong> </p>
+                  </div>
+                  <img alt="Thumbnail" src="static/images/johan/mrgen.png">
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/DidierMurilloF/FielDHub">
+                  <div class="overlay">
+                    <h2>FielDHub</h2>
+                    <p> <strong>ShinyApp</strong></p>
+                  </div>
+                  <img alt="Thumbnail" src="static/images/johan/fieldhub.png">
+                </a>
+              </li>
+            </ul>
           </div>
           <!-- .end .wrap -->
         </section>
 
         <section>
-          <div class="wrap">
-            <img class="alignleft size-50" src="static/images/qbms.png">
-            <h2><strong>QBMS</strong></h2>
-            <br>
-            <br>
-            <p>
-              Linking data management systems to analytics is an important step in breeding digitalization. 
-              Breeders can use this R package to Query the Breeding Management System (s) like BMS, BreeBase,
-              and GIGWA (using BrAPI calls) and help them to retrieve phenotypic and genotypic data directly
-              into their analyzing pipelines developed in R statistical environment.
-               <a href="https://github.com/icarda-git/QBMS">
-                <svg class="fa-github">
-                  <use xlink:href="#fa-github"></use>
-                </svg>icarda-git/QBMS
-              </a>
-               <br> <br> <br>
-            </p>
-            <center>
-              <img src="static/images/team_qbms.png" alt="team" width="20%">
-            </center>
-          </div>
-          <!-- .end .wrap -->
-        </section>
-
-        <!-- <section>
           <div class="wrap">
             <div class="cta text-serif">
               <div class="number">
@@ -643,6 +603,7 @@
                   </ul>
                 </div>
               </div>
+              <!--end .number -->
               <div class="benefit">
                 <div class="column">
                   <h3><strong>After this...</strong></h3>
@@ -660,79 +621,6 @@
                     <li>
                       <div>
                         Professor, DOE, Mixed Models, Statistical learning.
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section> -->
-
-        <section>
-          <h3  class="aligncenter"><strong> Meetings and Conferences</strong> <br><br></h3> 
-          <div class="wrap">
-            <div class="cta text-serif">
-              <div class="number">
-                <div class="column">
-                  <ul class="flexblock specs">
-                    <li>
-                      <div>
-                        <h2>September 2022</h2>
-                        XVIIITH Eucarpia Biometrics in Plant Breeding Conference. Paris-France.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <h2>April 2022</h2>
-                        Breeding Scheme Design Methods Training. Texcoco-Mexico.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <h2>November 2020</h2>
-                        <p>Title: ''MR.BEAN: A web application to simplify the analysis of plant breeding trials experiments
-                          using spatial analysis''. <em>ASA, CSSA & SSSA Annual Meeting</em>.</p> 
-                      </div>
-                    </li>
-                    <li>
-                       <div>
-                        <h2>October 2020</h2>
-                        <p>Title: ''MrBean: A web-app to facilitate analysis of large scale plant breeding experimental 
-                          trials''. <em>Big Data in Agriculture. Convention 2020 . CGIAR</em>.</p> 
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <!--end .number -->
-              <div class="benefit">
-                <div class="column">
-                  <ul class="flexblock specs">
-                    <li>
-                      <div>
-                        <h2>October 2020</h2>
-                        <p>Title: ''MrBean: An R-shiny Web Application for the Analysis of Plant Breeding Experiments''. Friday Hands-On Workshop Series.</p> 
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <h2>July 2019</h2>
-                        <p>Title: ''Predicción de la precipitación en el departamento del Valle del Cauca a partir de información
-                          satelital''. <em>XXIX International Statistics Symposium. Universidad del Norte.</em></p> 
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <h2>July 2019</h2>
-                        <p>Title: ''Web Application Developed for Spatial Modelling of Field Trials''. 
-                          <em>XXIX International Statistics Symposium. Universidad del Norte.</em></p> 
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <h2>November 2018</h2>
-                        <p>II Colombian Congress of Statistics. <em>Cali-Colombia.</em></p> 
                       </div>
                     </li>
                   </ul>
