--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                <br> <br> <br>
             </p>
             <center>
-              <img src="static/images/team_qbms.png" alt="team" width="20%">
+              <img src="static/images/team_qbms.svg" alt="team" width="20%">
             </center>
           </div>
           <!-- .end .wrap -->
