--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                       </svg> Universidad del Valle (2014-2019) 
                     </h5>
                     <h6>
+                      Senior Research Associate - CIAT
+                    </h6>
+                    <h6>
                       <svg class="fa-map-marker">
                         <use xlink:href="#fa-map-marker"></use>
                       </svg> 
@@ -114,7 +117,7 @@
                     <li>
                       <div>
                         <h2>Research Associate - CIAT</h2>
-                        <p>Oct 2020 - Present</p> 
+                        <p>Oct 2020 - Jan 2022</p> 
                         Phenotypic Data Analysis / GS / Mixed Models / DOE / Genetic Gain
                       </div>
                     </li>
@@ -514,7 +517,7 @@
             <h2><strong>Develoments and Contributions</strong></h2>
             <h4> R-Packages</h4>
             <center>
-              <img alt="Thumbnail " src="static/images/projects.png" width="60%">
+              <img alt="Thumbnail " src="static/images/projects3.png" width="60%">
             </center>
           </div>
         </section>
@@ -564,14 +567,14 @@
         <section>
           <div class="wrap">
             <img class="alignright size-20" src="static/images/boc_agriutilities2.png">
-            <h2><strong>agriUtilities</strong></h2>
+            <h2><strong>agriutilities</strong></h2>
             <br> <br> <br>
             <p>
               agriutilities is an <code>R</code> package designed to make the analysis of field trials easier and more accessible
               for everyone working in plant breeding. It provides a simple and intuitive interface for conducting
               single (<strong>STA</strong>) and multi-environmental trial analysis (<strong>MET</strong>), with minimal coding required. Whether you're a beginner
               or an experienced user, agriUtilities will help you quickly and easily carry out complex analyses with
-              confidence. With built-in functions for fitting Linear Mixed Models (<code>LMM</code>), agriUtilities is the ideal
+              confidence. With built-in functions for fitting Linear Mixed Models (<code>LMM</code>), agriutilities is the ideal
               choice for anyone who wants to save time and focus on interpreting their results.
               <br>
                <a href="https://github.com/AparicioJohan/agriutilities">
@@ -671,7 +674,7 @@
 
         <section>
           <h3  class="aligncenter"><strong> Meetings and Conferences</strong> <br><br></h3> 
-          <div class="wrap">
+          <div class="wrap size-100">
             <div class="cta text-serif">
               <div class="number">
                 <div class="column">
@@ -679,26 +682,26 @@
                     <li>
                       <div>
                         <h2>September 2022</h2>
-                        XVIIITH Eucarpia Biometrics in Plant Breeding Conference. Paris-France.
+                        XVIIITH Eucarpia Biometrics in Plant Breeding Conference. Paris-France. <strong>Attendee.</strong>
                       </div>
                     </li>
                     <li>
                       <div>
                         <h2>April 2022</h2>
-                        Breeding Scheme Design Methods Training. Texcoco-Mexico.
+                        <strong>Title:</strong> "Mixed Model Methods". <em>Breeding Scheme Design Methods Training. Texcoco-Mexico.</em> 
                       </div>
                     </li>
                     <li>
                       <div>
                         <h2>November 2020</h2>
-                        <p>Title: ''MR.BEAN: A web application to simplify the analysis of plant breeding trials experiments
+                        <p><strong>Title:</strong> ''MrBean: A web application to simplify the analysis of plant breeding trials experiments
                           using spatial analysis''. <em>ASA, CSSA & SSSA Annual Meeting</em>.</p> 
                       </div>
                     </li>
                     <li>
                        <div>
                         <h2>October 2020</h2>
-                        <p>Title: ''MrBean: A web-app to facilitate analysis of large scale plant breeding experimental 
+                        <p><strong>Title:</strong> ''MrBean: A web-app to facilitate analysis of large scale plant breeding experimental 
                           trials''. <em>Big Data in Agriculture. Convention 2020 . CGIAR</em>.</p> 
                       </div>
                     </li>
@@ -712,27 +715,27 @@
                     <li>
                       <div>
                         <h2>October 2020</h2>
-                        <p>Title: ''MrBean: An R-shiny Web Application for the Analysis of Plant Breeding Experiments''. Friday Hands-On Workshop Series.</p> 
+                        <p><strong>Title:</strong> ''MrBean: An R-shiny Web Application for the Analysis of Plant Breeding Experiments''. Friday Hands-On Workshop Series.</p> 
                       </div>
                     </li>
                     <li>
                       <div>
                         <h2>July 2019</h2>
-                        <p>Title: ''Predicción de la precipitación en el departamento del Valle del Cauca a partir de información
+                        <p><strong>Title:</strong> ''Predicción de la precipitación en el departamento del Valle del Cauca a partir de información
                           satelital''. <em>XXIX International Statistics Symposium. Universidad del Norte.</em></p> 
                       </div>
                     </li>
                     <li>
                       <div>
                         <h2>July 2019</h2>
-                        <p>Title: ''Web Application Developed for Spatial Modelling of Field Trials''. 
+                        <p><strong>Title:</strong> ''Web Application Developed for Spatial Modelling of Field Trials''. 
                           <em>XXIX International Statistics Symposium. Universidad del Norte.</em></p> 
                       </div>
                     </li>
                     <li>
                       <div>
                         <h2>November 2018</h2>
-                        <p>II Colombian Congress of Statistics. <em>Cali-Colombia.</em></p> 
+                        <p>II Colombian Congress of Statistics. <em>Cali-Colombia.</em> <strong>Attendee.</strong></p> 
                       </div>
                     </li>
                   </ul>
@@ -779,8 +782,8 @@
                     Art
                   </h3>
                   <ul class="description">
-                    <li> Piano  (new) </li>
-                    <li> Dancing Salsa </li>
+                    <li> Piano</li>
+                    <li> Dancing </li>
                   </ul>
                 </div>
               </li>
