docs: minnor changes

--- a/index2.html
+++ b/index2.html
@@ -566,22 +566,26 @@
 
         <section>
           <div class="wrap">
-            <img class="alignright size-50" src="static/images/agriutilities2.png">
+            <img class="alignright size-20" src="static/images/boc_agriutilities2.png">
             <h2><strong>agriutilities</strong></h2>
             <br> <br> <br>
             <p>
-              <code>agriutilities</code> is an <code>R</code> package designed to make the analysis of field trials easier and more accessible
+              agriutilities is an <code>R</code> package designed to make the analysis of field trials easier and more accessible
               for everyone working in plant breeding. It provides a simple and intuitive interface for conducting
-              single (<strong>STA</strong>) and multi-environmental trial analysis (<strong>MET</strong>), with minimal coding required. <code>agriutilities</code> is the ideal
+              single (<strong>STA</strong>) and multi-environmental trial analysis (<strong>MET</strong>), with minimal coding required. Whether you're a beginner
+              or an experienced user, agriUtilities will help you quickly and easily carry out complex analyses with
+              confidence. With built-in functions for fitting Linear Mixed Models (<code>LMM</code>), agriutilities is the ideal
               choice for anyone who wants to save time and focus on interpreting their results.
-              <a href="https://github.com/AparicioJohan/agriutilities">
+              <br>
+               <a href="https://github.com/AparicioJohan/agriutilities">
                 <svg class="fa-github">
                   <use xlink:href="#fa-github"></use>
                 </svg>AparicioJohan/agriutilities
               </a>
+               <br> <br>
             </p>
             <center>
-              <img src="static/images/agri_team.png" alt="team" width="15%">
+              <img src="static/images/agri_team.png" alt="team" width="20%">
             </center>
           </div>
           <!-- .end .wrap -->
@@ -612,25 +616,61 @@
           <!-- .end .wrap -->
         </section>
 
-        <section>
-          <div class="wrap size-50">
-            <h2>
-              <strong>Summary</strong>
-            </h2>
-            <p class="text-intro">Overview current activities.</p>
-            <hr>
-            <ul class="description">
-              <li><span class="text-label">DOE:</span>Planning and Designing Experiments.</li>
-              <li><span class="text-label">Field Trials:</span>Single Trial Analysis <strong>-</strong> Multi-Environmental Trial Analysis <strong>-</strong> Stability.</li>
-              <li><span class="text-label">LMM:</span>Repeated Measurements <strong>-</strong> Random Coefficient Regression <strong>-</strong> Variance-Covariance.</li>
-              <li><span class="text-label">GS:</span>BGLR <strong>-</strong> GAPIT <strong>-</strong> sommer <strong>-</strong> ASReml <strong>-</strong> rrBLUP.</li>
-              <li><span class="text-label">Web-Apps:</span>Shiny Apps <strong>-</strong> Docker Images <strong>-</strong> html <strong>-</strong> css</li>
-              <li><span class="text-label">GG:</span>Predicted & Realized Genetic Gain Estimation.</li>
-              <li><span class="text-label">Reports:</span>Rmarkdown <strong>-</strong> Interactive plots <strong>-</strong> Web-Pages.</li>
-              <li><span class="text-label">DATA:</span>Breeding Management Systems <strong>-</strong>  APIs </li>
-            </ul>
+        <!-- <section>
+          <div class="wrap">
+            <div class="cta text-serif">
+              <div class="number">
+                <div class="column">
+                  <h3><strong>Areas of future focus & Improvement</strong></h3>
+                  <ul class="flexblock specs">
+                    <li>
+                      <div>
+                        Quantitative Genetics.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Programming in python.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Learning deeply AlphaSimR.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Machine Learning.
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="benefit">
+                <div class="column">
+                  <h3><strong>After this...</strong></h3>
+                  <ul class="flexblock specs">
+                    <li>
+                      <div>
+                        Developing new tools, libraries, shinyapps, ...
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Leading a biometrics team.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        Professor, DOE, Mixed Models, Statistical learning.
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
-        </section>
+        </section> -->
 
         <section>
           <h3  class="aligncenter"><strong> Meetings and Conferences</strong> <br><br></h3> 
@@ -706,62 +746,6 @@
             <!--end .cta -->
           </div>
           <!-- .end .wrap -->
-        </section>
-
-        <section>
-          <div class="wrap">
-            <div class="cta text-serif">
-              <div class="number">
-                <div class="column">
-                  <h3><strong>Areas of future focus & Improvement</strong></h3>
-                  <ul class="flexblock specs">
-                    <li>
-                      <div>
-                        Improve my skills in Quantitative Genetics.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        Learn more about polyploids crops.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        Create and implement new algorithms.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        Develop analytical tools and packages that integrate genomic information applied to polyploid.
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="benefit">
-                <div class="column">
-                  <h3><strong>After this...</strong></h3>
-                  <ul class="flexblock specs">
-                    <li>
-                      <div>
-                        Leading a biometrics team.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        Professor, DOE, Mixed Models, Statistical learning.
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        Quantitative genetics expert.
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
         </section>
 
         <section>
@@ -884,7 +868,7 @@
     <footer>
       <div class="wrap">
         <p>
-          <span class="alignleft">  February 20, 2023</span> 
+          <span class="alignleft">  February 12, 2023</span> 
           <span class="alignright">
             <a href="https://www.linkedin.com/in/johan-steven-aparicio-arce-b68976193/" title="Linkedin">
               <svg class="fa-linkedin">
