docs: minnor changes

--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
           </div>
         </section>
 
-        <section>
+        <!-- <section>
           <div class="wrap">
             <h3> <strong>Hobbies </strong></h3>
             <ul class="flexblock features">
@@ -806,7 +806,7 @@
               </li>
             </ul>
           </div>
-        </section>
+        </section> -->
 
         <!-- <section class="aligncenter">
         <div class="wrap size-50">
