docs: minnor changes

--- a/index.html
+++ b/index.html
@@ -623,10 +623,10 @@
               <li><span class="text-label">DOE:</span>Planning and Designing Experiments.</li>
               <li><span class="text-label">Field Trials:</span>Single Trial Analysis <strong>-</strong> Multi-Environmental Trial Analysis <strong>-</strong> Stability.</li>
               <li><span class="text-label">LMM:</span>Repeated Measurements <strong>-</strong> Random Coefficient Regression <strong>-</strong> Variance-Covariance.</li>
-              <li><span class="text-label">GS:</span>BGLR <strong>-</strong> GAPIT <strong>-</strong> sommer <strong>-</strong> ASReml <strong>-</strong> rrBLUP.</li>
+              <li><span class="text-label">GS:</span>BGLR <strong>/</strong> GAPIT <strong>/</strong> sommer <strong>/</strong> ASReml <strong>/</strong> rrBLUP.</li>
               <li><span class="text-label">Web-Apps:</span>Shiny Apps <strong>-</strong> Docker Images <strong>-</strong> html <strong>-</strong> css</li>
               <li><span class="text-label">GG:</span>Predicted & Realized Genetic Gain Estimation.</li>
-              <li><span class="text-label">Reports:</span>Rmarkdown <strong>-</strong> Interactive plots <strong>-</strong> Web-Pages.</li>
+              <li><span class="text-label">Reports:</span>Rmarkdown <strong>/</strong> Interactive plots <strong>/</strong> Web-Pages.</li>
               <li><span class="text-label">DATA:</span>Breeding Management Systems <strong>-</strong>  APIs </li>
             </ul>
           </div>
